--- a/package.json
+++ b/package.json
@@ -10,8 +10,26 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "axios": "^1.5.0",
+    "bcrypt": "^5.1.1",
+    "express": "^4.18.2",
+    "express-session": "^1.17.3",
+    "jes": "^0.6.1",
+    "lodash": "^4.17.21",
+    "morgan": "^1.10.0",
+    "node": "^20.5.1",
+    "nodemon": "^3.0.1",
+    "pg": "^8.11.3",
+    "postcss": "^8.4.29",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
+    "sass": "^1.66.1",
+    "sequelize": "^6.32.1",
+    "socket.io": "^4.7.2",
+    "url": "^0.11.1",
+    "util": "^0.12.5",
+    "vite-express": "^0.10.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
