--- a/package.json
+++ b/package.json
@@ -5,6 +5,8 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon server/app.js -w app.js",
+    "initdb": "dropdb --if-exists grapevine && createdb grapevine",
+    "seed": "node server/database/seed.js",
     "build": "vite build",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
