--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-    "dev": "nodemon server/app.js -w app.js",
+    "dev": "nodemon server/app.js -w server/ src/",
     "initdb": "dropdb --if-exists grapevine && createdb grapevine",
     "seed": "node server/database/seed.js",
     "build": "vite build",
