Installed Precolor and Presized packages.

--- a/package.json
+++ b/package.json
@@ -23,6 +23,8 @@
     "nodemon": "^3.0.1",
     "pg": "^8.11.3",
     "postcss": "^8.4.29",
+    "precolor": "^1.0.0",
+    "presized": "^1.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.15.0",
