--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-router-dom": "^6.15.0",
+        "react-toastify": "^9.1.3",
         "sass": "^1.66.1",
         "sequelize": "^6.32.1",
         "session": "^0.1.0",
