--- a/package.json
+++ b/package.json
@@ -12,11 +12,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.410.0",
     "autoprefixer": "^10.4.15",
     "axios": "^1.5.0",
     "bcrypt": "^5.1.1",
     "dompurify": "^3.0.5",
+    "dotenv": "^16.3.1",
     "express": "^4.18.2",
+    "express-fileupload": "^1.4.0",
     "express-session": "^1.17.3",
     "jes": "^0.6.1",
     "lodash": "^4.17.21",
