added npm sharp to resize server images to 60x60.

--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "sass": "^1.66.1",
     "sequelize": "^6.32.1",
     "session": "^0.1.0",
+    "sharp": "^0.32.5",
     "socket.io": "^4.7.2",
     "url": "^0.11.1",
     "util": "^0.12.5",
